fixed on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -49,5 +49,8 @@
 }
 
 ul {
+    line-height: 1.5; 
+    padding: 10px;
     padding-left: 40px;
+    padding: 10px;
 }
